--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.15.0",
+    "recharts": "^2.8.0",
     "sass": "^1.65.1"
   },
   "devDependencies": {
