--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
+    "@vidstack/player-react": "^1.6.0",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
